# rust-aws-lamdba

./: Cargo.toml  README.md
infra/: .terraform.lock.hcl  rust_lambda.tf
src/: main.rs
