[package]
name = "rust-aws-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.9.1"
lambda_runtime = "0.9.1"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = "1.35.1"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "fmt",
    "env-filter",
    "json",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
